# null-auth

./: .env.example  .gitignore  README.md  env.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.module.scss  App.tsx  fonts.scss  index.scss  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  encryption.rs  main.rs  otp.rs  parse_uri.rs  proto_ser.rs  totp.rs  utils.rs  ws.rs
src-tauri/src/proto/: oauth.proto  oauth.rs
src/components/: accounts.tsx  authProvider.tsx  authWrapper.tsx  button.tsx  buttonMore.module.scss  buttonMore.tsx  dataProvider.module.scss  dataProvider.tsx  icons.tsx  input.tsx  modal.tsx  modalCreate.tsx  modalDelete.tsx  protectedRoute.tsx  sidebar.module.scss  sidebar.tsx  singleAccount.tsx  timer.tsx  titlebar.tsx  vaultWrapper.tsx
src/components/modals/: modal.tsx  modalDelete.tsx  modalExport.tsx  modalWrapper.tsx  sideModal.module.scss  sideModal.tsx
src/components/modals/modal-center/: modal-center.module.scss  modal-center.tsx
src/components/modals/modal-side/: modal-side.module.scss  modal-side.tsx
src/components/modals/modal-wrapper/: modal-wrapper.module.scss  modal-wrapper.tsx
src/components/otp/buttons-import/: button-import-image.tsx  button.module.scss
src/components/ui/: button.module.scss  button.tsx  icons.tsx  input.module.scss  input.tsx
src/components/ui/button/: button.module.scss  button.tsx
src/components/ui/button-dropdown/: button-dropdown.module.scss  button-dropdown.tsx
src/components/ui/input/: input.module.scss  input.tsx
src/components/vault/: vault-auth.tsx  vault-register.tsx  vault.module.scss
src/hooks/: useAuth.ts  useContextProvider.ts  useScanner.ts  useTimer.ts
src/lib/: animations.ts  commands.ts  constants.ts  db.ts  rustFunctions.ts  utils.ts
src/lib/validations/: localStoreValidation.ts
src/pages/: loginPage.tsx  mainPage.tsx  registerPage.tsx
src/pages/auth/: loginPage.tsx  registerPage.tsx
src/pages/dashboard/: accounts.tsx  cards.module.scss  cards.tsx  index.tsx  newAccount.tsx  otp.module.scss  otp.tsx  passwords.tsx  settings.module.scss  settings.tsx
src/pages/qrcodes/: export.tsx  import.tsx
src/pages/vault/: vault.module.scss  vaultAuthenticate.tsx  vaultAuthorize.tsx  vaultRegister.tsx
src/routes/: __404.tsx  __root.tsx  cards.module.scss  cards.tsx  index.tsx  otp.module.scss  otp.tsx  passwords.module.scss  passwords.tsx  root.module.scss  settings.tsx
src/store/: actions.ts  index.ts  localStore.ts  useAccountsStore.ts  useUserStore.ts  useZustandStore.ts
src/types/: index.d.ts
