[package]
name = "null-auth"
version = "1.0.0"
description = "null-auth"
authors = ["ruwpy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.4", features = [ "window-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libreauth = "0.16.0"
bcrypt = "0.15.0"
magic-crypt = "3.1.12"
google_authenticator_converter = "0.2.0"
urlencoding = "2.1.3"
protobuf = "3.2.0"
base64 = "0.21.2"
base32 = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
