[package]
name = "null-auth"
version = "1.0.0"
description = "null-auth"
authors = ["ruwpy"]
license = "GNU"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.4", features = [ "window-all", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.2"
urlencoding = "2.1.3"
protobuf = "2.0.0"
base64 = "0.21.2"
rand = "0.8.5"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
sha1 = "0.10.6"
hmac = "0.12.0"
base32 = "0.4"
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
